2013-10-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add missing info in alpha_map_add_range() doc.

	* datrie/alpha-map.c (alpha_map_add_range):
	  - Add documentation on return value.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix build for Visual Studio on Windows.

	* datrie/dstring.c (dstring_append, dstring_append_string,
	  dstring_append_char, dstring_terminate):
	  - Cast (void *) pointers to (char *) before calculating offsets,
	    for portability.

	Thanks Gabi Davar for the report and fix (via Mikhail Korobov
	<kmike84@gmail.com>).

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Check for doxygen required version.

	* configure.ac:
	  - When doxygen-doc is enabled, also check doxygen version.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix doxygen warning.

	* doc/Doxyfile.in:
	  - doxygen no longer ships with the FreeSans font. Just drop it.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Update Doxyfile.

	* doc/Doxyfile.in:
	  - Updated with 'doxygen -u'.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix compiler warnings.
	* datrie/trie-string.c (trie_string_append_string):
	* datrie/trie.c (trie_iterator_get_key):
	  - Cast strlen() args from (const TrieChar *) to (const char *),
	    to fix signedness mismatch warnings.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix automake warnings.

	* datrie/Makefile.am, tools/Makefile.am:
	  - Replace deprecated INCLUDES with AM_CPPFLAGS.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2013-01-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.2.6 ===

2013-01-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Use xz compression for release tarball.

	* configure.ac:
	  - Specify "dist-xz no-dist-gzip" options to AM_INIT_AUTOMAKE.
